--- a/roles/webhookapp/meta/main.yml
+++ b/roles/webhookapp/meta/main.yml
@@ -3,6 +3,7 @@ galaxy_info:
   author: Dima-Go
   description: test student
   company: just a company
+  role_name: test-webhook
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -17,7 +18,7 @@ galaxy_info:
   # - CC-BY-4.0
   license: license (GPL-2.0-or-later, MIT, etc)
 
-  min_ansible_version: 2.1
+  min_ansible_version: "2.1"
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
